# DTEAM-django-practical-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
CVProject/: celery.py  settings.py  urls.py  wsgi.py
main/: context_processors.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  views.py  views_api.py
main/fixtures/: initial_cv.json
main/migrations/: 0001_initial.py  0002_requestlog.py
main/templates/main/: cv_detail.html  cv_detail_pdf.html  cv_list.html  cv_translated.html  recent_logs.html  settings.html
